# kedro-pypi-to-snowflake

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: etl-schedule.yml
.viz/: stats.json
conf/: README.md  logging.yml
conf/base/: catalog.yml  parameters_etl.yml
conf/gha/: credentials.yml
notebooks/: test.ipynb
src/kedro_pypi_to_snowflake/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_pypi_to_snowflake/datasets/: clickhouse_dataset.py  snowpark_dataset.py
src/kedro_pypi_to_snowflake/pipelines/etl/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/etl/: test_pipeline.py
