[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_pypi_to_snowflake"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-pypi-to-snowflake = "kedro_pypi_to_snowflake.__main__:main"

[tool.kedro]
package_name = "kedro_pypi_to_snowflake"
project_name = "kedro-pypi-to-snowflake"
kedro_init_version = "0.19.8"
tools = [ "Linting", "Testing", "Custom Logging",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/kedro_pypi_to_snowflake -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_pypi_to_snowflake.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "4f000ebd6dc840ff90811dfc51c7f5f8"
